# potential-rotary-phone

./: .gitignore  LICENSE  README.md  create_audio_files.ipynb  pyproject.toml  secrets.json.example
sample/: two-mates-having-a-chat.m4a
